# f1tenth_ws_mpc_emergency

./: .gitignore  =1.22.0  =1.7.3  current_env.txt  current_pip_packages.txt  cvxpy-1.5.2-cp38-cp38-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  driving_log.txt  find_lidar_zero.py  frames.gv  joy_teleop.yaml  map_1760442058.pgm  ros_packages.txt
install/: local_setup.sh  setup.sh
install/ackermann_mux/lib/ackermann_mux/: ackermann_mux
install/ackermann_mux/share/ackermann_mux/: local_setup.sh  package.sh
install/f1tenth_rl/share/f1tenth_rl/: package.sh
install/f1tenth_stack/share/f1tenth_stack/: package.sh
install/joy_teleop/share/joy_teleop/: package.sh
install/key_teleop/share/key_teleop/: package.sh
install/mouse_teleop/share/mouse_teleop/: package.sh
install/particle_filter/share/particle_filter/: package.sh
install/pure_pursuit/lib/pure_pursuit/: pure_pursuit  waypoint_visualizer
install/pure_pursuit/share/pure_pursuit/: package.sh
install/safety_node/lib/safety_node/: safety_node
install/safety_node/share/safety_node/: package.sh
install/simple_teleop/lib/simple_teleop/: simple_teleop
install/simple_teleop/share/simple_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/stanley2_avoidance/share/stanley2_avoidance/: package.sh
install/teleop_tools/share/teleop_tools/: local_setup.sh  package.sh
install/teleop_tools_msgs/share/teleop_tools_msgs/: local_setup.sh  package.sh
install/vesc/share/vesc/: local_setup.sh  package.sh
install/vesc_ackermann/lib/vesc_ackermann/: ackermann_to_vesc_node  vesc_to_odom_node
install/vesc_ackermann/share/vesc_ackermann/: local_setup.sh  package.sh
install/vesc_driver/lib/vesc_driver/: vesc_device_namer  vesc_driver_node
install/vesc_msgs/share/vesc_msgs/: package.sh  (+1 more)
log/: latest_build
maps/: 1014_f1nal_f1tenth (copy).pgm  1014_f1tenth_ver1  1025_map  1104.pgm  1104_end.yaml  1104_end_final.pgm  1104_end_final.yaml  1104_final (copy).yaml  map_1114.pgm  map_1115.pgm  map_1115.yaml  map_1760419091.pgm  map_1760439518.pgm  map_1760442058.yaml  map_1762224797 (copy).pgm  map_1763108720.yaml
maps/.ipynb_checkpoints/: 1025_map-checkpoint.yaml
range_libc/pywrapper/: setup.py.backup
range_libc/pywrapper/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
range_libc/pywrapper/log/: latest_build
range_libc_backup_20251021_232817/: CMakeLists.txt
rosbag2_2025_10_10-20_30_59/: metadata.yaml
rosbag2_2025_10_31-02_29_55/: metadata.yaml
rosbag2_2025_11_24-20_12_54/: metadata.yaml
rosbag2_2025_11_25-15_39_31/: metadata.yaml
src/f1tenth_rl/: setup.py
src/f1tenth_rl/f1tenth_rl/: rl_agent_node.py
src/f1tenth_rl/scripts/: eval_rl_agent.py  train_rl_agent.py
src/f1tenth_stack/config/: vesc.yaml
src/f1tenth_system/vesc/vesc_driver/: CMakeLists.txt
src/install/: local_setup.sh  setup.sh
src/launchers/: CMakeLists.txt  package.xml  setup.py
src/launchers/launch/: gap_follow.launch.py  mpc.launch.py  pp.launch.py  reactive_mpc.launch.py  reactive_pp.launch.py
src/log/: latest_build
src/mpc/: CMakeLists.txt  package.xml  setup.py
src/mpc/scripts/: mpc_node.py  mpc_reactive.py
src/particle_filter/config/: localize.yaml
src/particle_filter/maps/: 1104_end.pgm  map_1763108720.pgm
src/particle_filter/particle_filter/: (11-22)particle_filter.py  particle_filter (11-24).py  particle_filter (1125).py  particle_filter (pure).py  particle_filter.py
src/safety_node/: setup.py
src/simple_teleop/: package.xml  setup.cfg  setup.py
src/simple_teleop/simple_teleop/: simple_teleop.py.save
src/stanley2_avoidance/config/: config.yaml
src/stanley2_avoidance/stanley2_avoidance/: 1118stanley2_avoidance.py  stanley2_avoidance.py
src/waypoint_generator/: package.xml
src/waypoint_generator/src/: (copy)1104_final.csv  (first)1014_final_f1tenth.csv  (second)1014_final_f1tenth.csv  (trash)1014_final_f1tenth.csv  .~lock.(mpc)1104_final.csv#  .~lock.1014_final_f1tenth (3rd copy).csv#  .~lock.1014_final_f1tenth .csv#  .~lock.1104_final.csv#  1014_final_f1tenth (copy).csv  1014_final_f1tenth(11-01-slow.ver).csv  1014_final_f1tenth.csv  1104_final.csv  1104_final_mpc.csv  map_1115.csv  waypoint_visualizer.cpp  waypoints_opt2.csv
trash map/: sososo.yaml  test.pgm  test.yaml
(+28 files in other folders)
